--- a/gestor_pagos/app/templates/index.html
+++ b/gestor_pagos/app/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Gastos Comunes</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <h1>Bienvenido a la Gestión de Gastos Comunes</h1>
