--- a/gestor_pagos/app/templates/pagar_gasto.html
+++ b/gestor_pagos/app/templates/pagar_gasto.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Pago</title>
+    <title>Registrar pago</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pagar_gasto.css') }}">
 </head>
 <body>
-    <h1>Registrar Pago de Gasto Común</h1>
+    <h1>Registrar Pago de gasto común</h1>
     <form action="/gastos/pagar" method="post">
-        <label for="gasto_id">ID del Gasto:</label>
-        <input type="number" id="gasto_id" name="gasto_id" required><br>
-        <label for="fecha_pago">Fecha de Pago:</label>
-        <input type="date" id="fecha_pago" name="fecha_pago" required><br>
-        <button type="submit">Registrar Pago</button>
+        <label for="gasto_id">ID del gasto:</label>
+        <input type="number" id="gasto_id" name="gasto_id" required>
+        <label for="fecha_pago">Fecha de pago:</label>
+        <input type="date" id="fecha_pago" name="fecha_pago" required>
+        <button type="submit">Registrar pago</button>
+        <button class="secondary" type="button" onclick="location.href='/'">Volver al inicio</button>
     </form>
-    <a href="/">Volver al inicio</a>
 </body>
 </html>
