pedazo de texto inutil

--- a/gestor_pagos/app/templates/pagar_gasto.html
+++ b/gestor_pagos/app/templates/pagar_gasto.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Registrar Pago de gasto común</h1>
     <form action="/gastos/pagar" method="post">
-        <label for="gasto_id">ID del gasto:</label>
+        <label for="gasto_id">Ingrese num departamento:</label>
         <input type="number" id="gasto_id" name="gasto_id" required>
         <label for="fecha_pago">Fecha de pago:</label>
         <input type="date" id="fecha_pago" name="fecha_pago" required>
