tabla depto operativa y gestor de gastos

--- a/gestor_pagos/app/templates/pendientes.html
+++ b/gestor_pagos/app/templates/pendientes.html
@@ -13,7 +13,7 @@
     <table>
         <thead>
             <tr>
-                <th>Num-depto</th>
+                <th>Num. Depto</th>
                 <th>Descripción</th>
                 <th>Monto</th>
                 <th>Mes/Año</th>
@@ -22,6 +22,7 @@
         <tbody>
             {% for gasto in pendientes %}
             <tr>
+                <td>{{ gasto.num_depto }}</td>
                 <td>{{ gasto.descripcion }}</td>
                 <td>{{ gasto.monto }}</td>
                 <td>{{ gasto.mes }}/{{ gasto.anio }}</td>
